// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BooksSummary properly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      books
       totalling
       
      <span>
        $0.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add-book"
      >
        Add Book
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render BooksSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      books
       totalling
       
      <span>
        $23,423,442.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add-book"
      >
        Add Book
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render BooksSummary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      book
       totalling
       
      <span>
        $235.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add-book"
      >
        Add Book
      </Link>
    </div>
  </div>
</div>
`;
